Fixed spacing in hero section

--- a/css/style.scss
+++ b/css/style.scss
@@ -537,24 +537,15 @@ img {
         padding: 1em 5em;
     }
 
-    // .download {
-    //     .download-img {
-    //         .download-screen-img {
-    //             width: 412px;
-    //             height: 468px;
-    //         }
-    //     }
-    // }
-
     .hero {
-        padding: 2em 10em;
+        padding: 2em 8em;
 
         .hero-text {
-            width: 400px;
+            width: 450px;
             
 
             h1 {
-                font-size: 3.6rem;
+                font-size: 3.2rem;
                 line-height: 4.5rem;
             }
 
